# Crypto-analyzer

./: Dockerfile  README.md  cli.py  docker-compose.yml  docker-entrypoint.sh
agg_trade/: Dockerfile  agg_trade.py  pyproject.toml  settings.py
application/: Dockerfile  bid_ask_ratio.py  constants.py  db.py  db_back.py  exceptions.py  main.py  parse_n_send.py  pyproject.toml  settings.py
db_init/: init.sql
signals_pg/: postmaster.pid
signals_pg/base/1/: 2619  2619_fsm  2696  2840  2840_fsm  2841
signals_pg/base/16384/: 1247  1247_fsm  1249  1249_fsm  1259  1259_fsm  13401  16385  16386  16386_fsm  16386_vm  16391  16392  16394  16395  16395_fsm  16399  2224  2579  2604  2606  2606_fsm  2608  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  (+12 more)
signals_pg/base/5/: 2619
signals_pg/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
signals_pg/pg_xact/: 0000
st/: Dockerfile  pyproject.toml  settings.py  st.py
tests/: conftest.py  test_load_data.py  test_main.py  test_parse_data.py
