[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Try to deploy project on server"
authors = ["Dima <dm199412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
click = "^8.1.7"
apscheduler = "^3.10.4"
psycopg2 = "^2.9.9"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
scipy = "^1.12.0"
binance = "^0.3"
python-binance = "^1.0.19"
binance-connector = "^3.6.0"
binance-py = "^1.9.0"
logging = "^0.4.9.6"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
